# f250-maritime-uav-sim

./: .gitattributes  .gitignore  README.md  apply_px4_f250_patch.sh  check_release_package.sh
runtime/: README.md  RUNTIME_INDEX.md  env.example
runtime/catkin_ws/src/f250_maritime_uav_sim/: CMakeLists.txt  package.xml
runtime/catkin_ws/src/f250_maritime_uav_sim/config/: quick_complex_defaults.env
runtime/catkin_ws/src/f250_maritime_uav_sim/config/routes/: classic_p0_p8.yaml
runtime/catkin_ws/src/f250_maritime_uav_sim/config/scenes/: level_m_gps_assets_quick_complex.yaml
runtime/catkin_ws/src/f250_maritime_uav_sim/launch/: f250_ego_advanced_param_px4_native_pose.xml  maritime_ego_planner.launch  maritime_obstacles.launch  maritime_px4_sitl.launch  maritime_visual_acceptance.launch
runtime/catkin_ws/src/f250_maritime_uav_sim/rviz/: maritime_visual_acceptance.rviz  maritime_visual_acceptance_depth.rviz
runtime/catkin_ws/src/f250_maritime_uav_sim/scripts/: f250_check_perception_gate.py  f250_cleanup_runs.sh  f250_control_panel.py  f250_fc_3_10_steady_state.py  f250_generate_plan_plot.sh  f250_generate_result_plot.sh  f250_install_desktop_shortcut.sh  f250_layout_windows.py  f250_open_control_panel.sh  f250_paths.sh  f250_prealign_yaw.py  f250_quick_complex_record.py  f250_route_human_summary.py  f250_route_profiles.py  f250_run_fc_3_10_steady_state.sh  f250_run_p0_p8_route.sh  f250_start_to_p0_hover.sh  f250_stop_all.sh  gazebo_truth_to_mavros_vision.py  generate_maritime_world.py  maritime_clearance.py  maritime_dynamic_obstacles.py  maritime_flight_path.py  maritime_goal_sequence.py  maritime_inflated_obstacle_markers.py  maritime_laser_scan_adapter.py  maritime_lidar_follow_odom.py  maritime_metric_core.py  maritime_metric_monitor.py  maritime_scene_markers.py  maritime_scene_utils.py  maritime_sensor_cloud_adapter.py  mavros_odom_to_tf.py  position_cmd_to_mavros_setpoint.py  start_demo_waypoints.sh  start_maritime_sim.sh
runtime/catkin_ws/src/f250_maritime_uav_sim/worlds/: maritime_level_m_gps_assets_quick_complex.world
(+79 files in other folders)
